--- a/docs/parenting_under_pressure.tex
+++ b/docs/parenting_under_pressure.tex
@@ -90,6 +90,12 @@
 \hypertarget{introduction}{%
 \chapter{Introduction}\label{introduction}}
 
+\begin{figure}
+\centering
+\includegraphics{images/pup_header.png}
+\caption{}
+\end{figure}
+
 The recent COVID-19 pandemic has caused tremendous pressure on caregivers, children, and families on a global scale. Previous research investigating the impacts of traumatic events on caregiver child relationships has shown the importance of maintaining positive caregiver child relationships in order to buffer the distress of the child. Despite the fact that traumatic events may present several challenges that potentially strain caregiver child relationships, parental buffering may alleviate anxiety and stress. While there is a breadth of existing research that encapsulates the benefits of strong caregiver child relationships during troubled times, little research exists on the transfer of parent threat information to children and its implications in the child's heightened fear and anxiety. Furthermore, few studies have surfaced regarding the larger emotional and behavioral impacts of COVID-19 on caregivers and children alike. As a traumatic experience, COVID-19 poses unique threats to families due its impacts in social distancing and self-isolation. Research in this topic will be integral to informing interventions that may diminish the negative effects of this traumatic experience for the future.
 
 This study seeks to explore the ways in which the COVID-19 outbreak has specifically influenced caregivers, children, and families. In determining children's largest sources of information about COVID-19, we will assess the impacts of parent threat information on the child's fear about illness and contamination, and the larger implications for the child's anxiety. Moreover, we will evaluate the impacts of the COVID-19 outbreak on parent-child relationships and parental stress, focusing on the potential ways in which caregivers are buffering their child's stress during this period.
@@ -100,8 +106,15 @@ Parenting, COVID-19, pandemic, stress, children
 
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
+\hypertarget{summary}{%
+\section{Summary}\label{summary}}
+
+This study will be available in both English and Spanish. The study will gather both qualitative and quantitative data from parents and their children through an anonymous online questionnaire. The target population for this study will be parents with children aged 6-17 years old. The online survey is a mixed methods design and will include a multitude of questionnaires related to fear, anxiety, sleep, and parent child relationships prior to (retrospectively reported) and during the context of the COVID-19 outbreak.
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
 \hypertarget{background}{%
-\chapter{Background}\label{background}}
+\section{Background}\label{background}}
 
 The effect of mass traumatic events has been shown to be extremely impactful to psychological health. Mass trauma experiences can result in a number of acute and chronic stress reactions, which may lead to a number of longer-term poor mental health outcomes (Chriman \& Dougherty, 2014). More specifically, previous outbreaks have been shown to cause tremendous impacts on fear, anxiety, depression, posttraumatic stress, and subjective well being (Cheng \& Cheuong, 2005; Perrin et al., 2009; Wu et al., 2005). While a large majority of the population may experience negative impacts on their mental health, caregivers and children may carry a specific set of challenges following such traumatic events.
 
@@ -112,7 +125,7 @@ Although each traumatic event may pose its own unique challenges and impacts, th
 \begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
 
 \hypertarget{specific-aims}{%
-\chapter{Specific Aims}\label{specific-aims}}
+\section{Specific Aims}\label{specific-aims}}
 
 The proposed study will assess the impacts of COVID-19 on caregiver-child relationships and mental health outcomes for children. This study has 4 specific aims:
 
@@ -467,7 +480,7 @@ Made by BABLab; adapted from the Sources of Information about Swine Flu Scale (R
 \hypertarget{recruitment}{%
 \subsection{Recruitment}\label{recruitment}}
 
-Participants were recruited online via postings on Craigslist and NextDoor and digital marketing efforts on the LA Virtual Camp Fair Website. Postings were made on social media, via Facebook paid advertisement, in Facebook parent forums, Instagram, LinkedIn, and Twitter. Recruitment efforts also included emailing listservs and community stakeholders/research collaborators for distribution, contacting local school boards, and creating press releases for local (community postings on Patch) news distribution.
+Participants were recruited online via postings on Craigslist and NextDoor and digital marketing efforts on the \href{https://www.vcampfair.com/brain-and-body-lab-ucla.html}{LA Virtual Camp Fair Website}. Postings were made on social media, via Facebook paid advertisement, in Facebook parent forums, Instagram, LinkedIn, and Twitter. Recruitment efforts also included emailing listservs and community stakeholders/research collaborators for distribution, contacting local school boards, and creating press releases for local (community postings on Patch) news distribution.
 
 The following materials were used:
 
@@ -496,8 +509,6 @@ The survey takes approximately 40 minutes to complete, including 5 minutes of ch
 \tightlist
 \item
   Participant
-\item
-  PANAS (1st assessment)
 \item
   COVID-19 Information
 \item
@@ -530,7 +541,7 @@ The survey takes approximately 40 minutes to complete, including 5 minutes of ch
   PANAS (3rd assessment)
 \item
   Child Written Response
-  (if applicable, \#19-21)
+  (if applicable, \#18-20)
 \item
   Child \#2 Written Response
 \item
@@ -560,6 +571,126 @@ The survey takes approximately 40 minutes to complete, including 5 minutes of ch
 \item
   RCADS
 \end{enumerate}
+
+\hypertarget{references}{%
+\chapter{References}\label{references}}
+
+Adler, N. E., Epel, E. S., Castellazzo, G., \& Ickovics, J. R. (2000).
+Relationship of subjective and objective social status with psychological
+and physiological functioning:Preliminary data in healthy, White women.
+Health Psychology, 19(6), 586-592.
+
+Biringen, Z., Robinson, J. \& Emde, R. (1998). The Emotional Availability
+Scales (3rd ed.). Retrieved from www.emotionalavailability.com
+
+Berry, J. O., \& Jones, W. H. (1995). The Parental Stress Scale: Initial
+psychometric evidence. Journal of Social and Personal Relationships, 12,
+463-472.
+
+Cheng, C., \& Cheung, M. W. (2005). Psychological responses to outbreak of
+severe acute respiratory syndrome: a prospective, multiple time‐point
+study. Journal of Personality, 73(1), 261-285.
+
+Chorpita, B. F., Yim, L., Moffitt, C., Umemoto, L. A., \& Francis, S. E. (2000). Assessment of
+symptoms of DSM-IV anxiety and depression in children: A revised child anxiety and
+depression scale. Behaviour research and therapy, 38(8), 835-855.
+
+Chrisman, A. K., \& Dougherty, J. G. (2014). Mass trauma: Disasters, terrorism, and war. Child
+and Adolescent Psychiatric Clinics, 23(2), 257-279.
+
+Ehenreich-May, J. (2020). Fear of Illness and Virus Evaluation (FIVE) -- Parent Report Form
+{[}Measurement instrument{]}. Retrieved from
+\url{https://drive.google.com/drive/u/0/folders/1RhHt77XQzItmpw_yGAteILlMNIGpj5pU}
+
+Ehenreich-May, J. (2020). Fear of Illness and Virus Evaluation (FIVE) -- Adult Report Form
+{[}Measurement instrument{]}. Retrieved from
+\url{https://drive.google.com/drive/u/0/folders/1RhHt77XQzItmpw_yGAteILlMNIGpj5pU}
+
+Furman W, Buhrmester D. The Network of Relationships Inventory: Behavioral Systems
+Version. Int J Behav Dev. 2009;33(5):470--478. \url{doi:10.1177/0165025409342634}
+
+Gewirtz, A., Forgatch, M., \& Wieling, E. (2008). Parenting practices as potential mechanisms for
+child adjustment following mass trauma. Journal of Marital and Family Therapy, 34(2),
+177-192.
+
+Grant, M.L. \& Kothare, S. (2005). Older Child/Adolescent Sleep Habits Questionnaire- Parent
+Report {[}Measurement instrument{]}. Retrieved from \url{http://www.childrenshospital.org/-}
+/media/Centers-and-Services/Programs/O\_Z/Pediatric-Sleep-Disorders-Center/Research-
+VersionParentsAdolescentSHQLC.ashx?la=en\&hash=2CAB880BC93A221FB31BD6BA
+DE3C7B6313D139AB
+
+Guimond, A. B., Wilcox, M. J., \& Lamorey, S. G. (2008). The early intervention parenting self-
+Efficacy Scale (EIPSES) scale construction and initial psychometric evidence. Journal of
+early intervention, 30(4), 295-320.
+
+Ladouceur, C.D. (2020). COVID-19 Adolescent Symptom \& Psychological Experience (CASPE)-
+Parent Questionnaire {[}Measurement instrument{]}. Retrieved from \url{https://osf.io/hu2k9/}
+
+Luyten, P., Mayes, L. C., Nijssens, L., \& Fonagy, P. (2017). The parental reflective functioning
+questionnaire: Development and preliminary validation. PLOS ONE, 12(5), e0176218.
+doi: 10.1371/journal.pone.0176218
+
+Ollendick, T. H. (1983). Reliability and validity of the revised fear survey schedule for children
+(FSSC-R). Behaviour research and therapy, 21(6), 685-692.
+
+Owens, J. A., Spirito, A., \& McGuinn, M. (2000). The Children's Sleep Habits Questionnaire
+(CSHQ): psychometric properties of a survey instrument for school-aged children. Sleep-
+New York-, 23(8), 1043-1052.
+
+Pennebaker, J. W. (1997). Writing about emotional experiences as a therapeutic
+process. Psychological science, 8(3), 162-166.
+
+Pereira, A. I., Barros, L., Roberto, M. S., \& Marques, T. (2017). Development of the Parent
+Emotion Regulation Scale (PERS): Factor Structure and Psychometric Qualities. Journal
+of Child and Family Studies, 26(12), 3327-3338.
+
+Perrin, P. C., McCabe, O. L., Everly, G. S., \& Links, J. M. (2009). Preparing for an influenza
+pandemic: mental health considerations. Prehospital and disaster medicine, 24(3), 223-
+230.
+
+Pfefferbaum, B. J., Devoe, E. R., Stuber, J., Schiff, M., Klein, T. P., \& Fairbrother, G. (2005).
+Psychological impact of terrorism on children and families in the United States. Journal
+of aggression, maltreatment \& trauma, 9(3-4), 305-317.
+
+Pfiefer, J. (2020). Adolescent Social Connection \& Coping During COVID Questionnaire (ASC)
+{[}Measurement instrument{]}. Retrieved from \url{https://osf.io/jakg5/}
+
+Pfiefer, J. (2020). Combined COVID Health Emotional Lifestyle Changes{[}Measurement
+instrument{]}. Retrieved from \url{https://osf.io/c2z8k/}
+
+Pfiefer, J. (2020). COVID Lifestyle Changes {[}Measurement instrument{]}. Retrieved from
+\url{https://osf.io/wqmda/}
+
+Pfiefer, J. \& Lewis, J. (2020). Modified KidCOPE {[}Measurement instrument{]}. Retrieved from
+\url{https://osf.io/wcgj8/}
+
+Phillips, D., Scheibelhut, L., \& Prince, S. (2003, April). Children's responses to the terrorist
+attacks of September 11th: An exploratory study. In J. Lawrence Aber \& D. Phillips
+(Chairs), The aftermath of September 11th, 2001: Developmental effects and policy
+implications. Symposium conducted at the Biennial Meetings of the Society for Research
+in Child Development, Tampa, FL.
+Pianta, R.C. (1992). Child-Preant Relationship Scale (CPRS) {[}Measurement instrument{]}.
+Retrieved from ttps://curry.virginia.edu/faculty-research/centers-labs-
+projects/castl/measures-developed-robert-c-pianta-phd
+
+Remmerswaal, D., \& Muris, P. (2011). Children's fear reactions to the 2009 Swine Flu
+pandemic: The role of threat information as provided by parents. Journal of anxiety
+disorders, 25(3), 444-449.
+
+Svebak, S. (1993). The development of the tension and effort stress inventory (TESI). Advances
+in reversal theory, 189-204.
+
+Waters, E. (1995). Appendix A: The attachment Q-set (version 3.0). Monographs of the society
+for research in child development, 234-246.
+
+Watson, D., Clark, L. A., \& Tellegen, A. (1988). Development and validation of brief measures
+of positive and negative affect: the PANAS scales. Journal of personality and social
+psychology, 54(6), 1063.
+
+Wu, K. K., Chan, S. K., \& Ma, T. M. (2005). Posttraumatic stress, anxiety, and depression in
+survivors of severe acute respiratory syndrome (SARS). Journal of Traumatic Stress:
+Official Publication of The International Society for Traumatic Stress Studies, 18(1), 39-
+42.
 
 \bibliography{book.bib,packages.bib,ref.bib}
 
