--- a/index.Rmd
+++ b/index.Rmd
@@ -14,7 +14,7 @@ description: "This is the Wiki for the Parenting Under Pressure"
 
 # Introduction
 
-![<!--- Flyer --->](images/pup_header.png)
+![<!--- Flyer --->](images/PUP_header.png)
 
 The recent COVID-19 pandemic has caused tremendous pressure on caregivers, children, and families on a global scale. Previous research investigating the impacts of traumatic events on caregiver child relationships has shown the importance of maintaining positive caregiver child relationships in order to buffer the distress of the child. Despite the fact that traumatic events may present several challenges that potentially strain caregiver child relationships, parental buffering may alleviate anxiety and stress. While there is a breadth of existing research that encapsulates the benefits of strong caregiver child relationships during troubled times, little research exists on the transfer of parent threat information to children and its implications in the child's heightened fear and anxiety. Furthermore, few studies have surfaced regarding the larger emotional and behavioral impacts of COVID-19 on caregivers and children alike. As a traumatic experience, COVID-19 poses unique threats to families due its impacts in social distancing and self-isolation. Research in this topic will be integral to informing interventions that may diminish the negative effects of this traumatic experience for the future. 
 
