--- a/docs/parenting_under_pressure.tex
+++ b/docs/parenting_under_pressure.tex
@@ -92,7 +92,7 @@
 
 \begin{figure}
 \centering
-\includegraphics{images/pup_header.png}
+\includegraphics{images/PUP_header.png}
 \caption{}
 \end{figure}
 
