--- a/docs/parenting_under_pressure.tex
+++ b/docs/parenting_under_pressure.tex
@@ -486,7 +486,7 @@ The following materials were used:
 
 \begin{figure}
 \centering
-\includegraphics{images/pup_flyer.png}
+\includegraphics{images/PUP_flyer.png}
 \caption{}
 \end{figure}
 
