--- a/docs/parenting_under_pressure.tex
+++ b/docs/parenting_under_pressure.tex
@@ -490,7 +490,7 @@ The following materials were used:
 
 \begin{figure}
 \centering
-\includegraphics{images/PUP_flyer.png}
+\includegraphics{images/flyer.png}
 \caption{}
 \end{figure}
 
