--- a/01-methods.Rmd
+++ b/01-methods.Rmd
@@ -77,7 +77,7 @@ Participants were recruited online via postings on Craigslist and NextDoor and d
 
 The following materials were used:
 
-![<!--- Flyer --->](images/PUP_flyer.png)
+![<!--- Flyer --->](images/flyer.png)
 
 
 Participants who enroll in the study will be placed in a raffle to win one of twenty $100 Visa gift cards by providing an email address following completion of the study. Participants do not have to complete or enroll in the study to go in the draw to receive the gift card.
