--- a/docs/parenting_under_pressure.tex
+++ b/docs/parenting_under_pressure.tex
@@ -78,7 +78,7 @@
 
 \title{Parenting Under Pressure}
 \author{Bridget Callaghan, Kristen Chu, Emily Towner}
-\date{2020-12-03}
+\date{2021-09-29}
 
 \begin{document}
 \maketitle
@@ -266,9 +266,9 @@ This 47 item questionnaire contains subscales of separation anxiety disorder, so
 \begin{minipage}[t]{0.13\columnwidth}\raggedright
 STAI\strut
 \end{minipage} & \begin{minipage}[t]{0.21\columnwidth}\raggedright
-State-Trait Anxiety Inventory-Parent Self-Report\strut
+Shortened State-Trait Anxiety Inventory-Parent Self-Report\strut
 \end{minipage} & \begin{minipage}[t]{0.38\columnwidth}\raggedright
-This Inventory contains two blocks, 20 items detailing state anxiety and 20 items detailing trait anxiety. The inventory asks participants to rate how often they feel each item, in either the context of general feelings or how the participant feels currently, to assess both state and trait anxiety.\strut
+This Inventory contains a shortened State-Trait Anxiety Inventory, with 6 total items detailing state anxiety. The inventory asks participants to rate how often they feel each item, in the context of how the participant feels currently.\strut
 \end{minipage} & \begin{minipage}[t]{0.15\columnwidth}\raggedright
 (Spielberger et al., 1983)\strut
 \end{minipage}\tabularnewline
